--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <li><a href="pag003.html">Local</a></li>
         <li><a href="pag004.html">Cardapio</a></li>
         <li><a href="pag005.html">Contato</a></li>
-        <li><a href="pag006.html">Fotos</a></li>
+        <li><a href="pag006.html">Carrossel</a></li>
       </ul>
     </nav>
   </header>
